# Cooperative_driving_2025

./: README.md  cir.py  cri.py  plot_data.py  plot_data_averages.py  timer.py
Evaluerings data/: bot_4_intersection_2_alone_k10.csv  bot_4_intersection_2_alone_k2.csv  bot_4_intersection_2_alone_k5.csv  bot_4_intersection_2_alone_k7.csv  bot_4_intersection_2_alone_k9.csv  bot_5_intersection_1_alone_k3.csv  bot_5_intersection_1_alone_k7.csv  bot_5_intersection_1_alone_k8.csv
Evaluerings data/bot 4_intersection_2_k1-11/: bot 4_intersection_2_k6.csv  bot_4_intersection_2_k1.csv  bot_4_intersection_2_k11.csv  bot_4_intersection_2_k3.csv  bot_4_intersection_2_k4.csv  bot_4_intersection_2_k7.csv  bot_4_intersection_2_k8.csv  bot_4_intersection_2_k9.csv
Evaluerings data/bot 4_intersection_2_slow_k1-10/: bot 4_intersection_2_slow_k4.csv  bot 4_intersection_2_slow_k5.csv  bot 4_intersection_2_slow_k6.csv
Evaluerings data/bot 4_intersection_2_with4_slow_k1-k10/: bot 4_intersection_2_with4_slow_k1.csv  bot 4_intersection_2_with4_slow_k10.csv  bot 4_intersection_2_with4_slow_k2.csv  bot 4_intersection_2_with4_slow_k4.csv  bot 4_intersection_2_with4_slow_k6.csv  bot 4_intersection_2_with4_slow_k9.csv
Evaluerings data/bot 4_intersection_5_k1-k10/: bot 4_intersection_5_k1.csv  bot 4_intersection_5_k10.csv  bot 4_intersection_5_k2.csv  bot 4_intersection_5_k3.csv  bot 4_intersection_5_k4.csv  bot 4_intersection_5_k5.csv  bot 4_intersection_5_k8.csv
Evaluerings data/bot 4_intersection_5_with1_k1-10/: bot 4_intersection_5_with1_k1.csv  bot 4_intersection_5_with1_k3.csv  bot 4_intersection_5_with1_k4.csv  bot 4_intersection_5_with1_k6.csv  bot 4_intersection_5_with1_k7.csv  bot 4_intersection_5_with1_k8.csv  bot 4_intersection_5_with1_k9.csv
Evaluerings data/bot 4_intersection_5_with3_k1-k10/: bot 4_intersection_5_with3_k9.csv
Evaluerings data/bot 4_merging_main_2_k1-k10/: bot 4_merging 1_data_2025-04-25_14-47-16.csv  bot 4_merging 1_data_2025-04-25_14-51-42.csv  bot 4_merging 1_data_2025-04-25_14-52-33.csv  (+3 more)
Merging24/: README.md  gullivutil.py  gv_socket_server.py  gv_socket_server_old.py  process.py  udp.py
cooperative_driving_2025/src/roswifibot_bot/: CMakeLists.txt  README.md
cooperative_driving_2025/src/roswifibot_bot/scripts/: wifibot_teleop_joy.py
cooperative_driving_2025/src/roswifibot_bot/src/: wifibot.cpp
devel/: .rosinstall  _setup_util.py
src/roswifibot_bot/: package.xml
src/roswifibot_bot/launch/: robot_launch.launch
ttc/: data_structures.py  read_csv_file.py  ttc.py
(+545 files in other folders)
